<resources>
    <string name="app_name">音乐 (lè)</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="login">登录</string>
    <string name="sign_with_a_social_account">Sign with a social account</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_twitter">Login with Twitter</string>
    <string name="home">Home</string>
    <string name="new_albums">New Albums</string>
    <string name="recommendations">Recommendations</string>
    <string name="see_all">See All</string>
    <string name="library">Library</string>
    <string name="profile">Profile</string>
    <string name="followers">Followers</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="play_list">PlayList</string>
    <string name="songs">Songs</string>
    <string name="search">Search</string>
    <string name="search_cn">搜索</string>
</resources>
