<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.titvt.yinle.main.MainViewModel" />

        <variable
            name="keywords"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".fragment.SearchFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53.5dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="53.5dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{()->viewModel.pageBack()}"
                    android:src="@mipmap/arrow" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="53.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/search"
                android:textColor="@color/blackText"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyBorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@drawable/input_text"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@={keywords}"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.search(keywords)}"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:text="@string/search_cn"
                android:textColor="@color/blueBackground"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyBorder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</layout>
