<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.titvt.yinle.viewmodel.MainViewModel" />

        <variable
            name="songInfo"
            type="com.titvt.yinle.bean.SongInfo" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".view.HomeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="53.5dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="53.5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/blackText"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="53.5dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/search" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyBorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24.5dp"
                android:text="@string/new_albums"
                android:textColor="@color/blackText"
                android:textSize="22sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24.5dp"
                android:layout_weight="1"
                android:text="@string/recommendations"
                android:textColor="@color/blackText"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="13.5dp"
                android:text="@string/see_all"
                android:textColor="@color/blueBackground"
                android:textSize="18sp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/greyBorder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="@{()->viewModel.switchStatus()}">

                <ImageView
                    android:layout_width="20dp"
                    android:id="@+id/play"
                    android:layout_height="22dp"
                    android:src="@mipmap/play_blue" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:onClick="@{()->viewModel.enterSong()}"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="280dp"
                    android:maxLines="1"
                    android:text="@{songInfo.name}"
                    android:textColor="@color/blackText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="280dp"
                    android:maxLines="1"
                    android:text="@{songInfo.ar}"
                    android:textColor="@color/greyText"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="5dp"
                    android:src="@mipmap/dots" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>