<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="userInfo"
            type="com.titvt.yinle.bean.UserInfo" />

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".view.ProfileFragment">

        <ImageView
            android:id="@+id/background"
            android:layout_width="match_parent"
            android:layout_height="396.5dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="44.5dp"
            android:text="@string/profile"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="396.5dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60.5dp"
                android:text="@{userInfo.nickname}"
                android:textColor="@color/blackText"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/pin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="13dp"
                    android:text="@{String.valueOf(userInfo.city)}"
                    android:textColor="@color/lightGreyText"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39.5dp"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userInfo.followeds)}"
                        android:textColor="@color/blackText"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.5dp"
                        android:text="@string/followers"
                        android:textColor="@color/lightGreyText"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70.5dp"
                    android:layout_marginEnd="70.5dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userInfo.playlistCount)}"
                        android:textColor="@color/blackText"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.5dp"
                        android:text="@string/posts"
                        android:textColor="@color/lightGreyText"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(userInfo.follows)}"
                        android:textColor="@color/blackText"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10.5dp"
                        android:text="@string/following"
                        android:textColor="@color/lightGreyText"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="374.5dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/pink_button"
                android:gravity="center">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="21dp"
                    android:src="@mipmap/like" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/light_blue_button"
                android:gravity="center">

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@mipmap/ok" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="@drawable/green_button"
                android:gravity="center">

                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="23dp"
                    android:src="@mipmap/message" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</layout>